[gd_scene load_steps=8 format=3 uid="uid://b8bf6sdmc2hio"]

[ext_resource type="PackedScene" uid="uid://d2vage21b5686" path="res://EnemyAssets/Prism/PrismSprite.tscn" id="1_x46x0"]
[ext_resource type="Script" path="res://prism.gd" id="1_x66eh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xv5fr"]
size = Vector2(23, 178)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78ism"]
size = Vector2(20, 59.3333)

[sub_resource type="CircleShape2D" id="CircleShape2D_ms20x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5iu02"]
size = Vector2(70, 176)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8x0h6"]
size = Vector2(53, 175)

[node name="Prism" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 17
collision_mask = 17
lock_rotation = true
script = ExtResource("1_x66eh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -2)
shape = SubResource("RectangleShape2D_xv5fr")

[node name="PrismSprite" parent="." instance=ExtResource("1_x46x0")]

[node name="Hurtbox" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 128
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" groups=["Enemy"]]
position = Vector2(0, -2)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_78ism")

[node name="Detect" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
scale = Vector2(80, 80)
shape = SubResource("CircleShape2D_ms20x")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="HitboxL" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitboxL"]
position = Vector2(-46, -2)
shape = SubResource("RectangleShape2D_5iu02")

[node name="HitboxR" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxR"]
position = Vector2(43.5, -2)
shape = SubResource("RectangleShape2D_8x0h6")

[node name="Swing" type="AudioStreamPlayer2D" parent="."]
